@@ -1,4 +1,5 @@
 [1.9.2-SNAPSHOT]
+- (#86) Fix cast exception when minimizing desktop-based games
 
 [1.9.1]
 - Fix hexagonal Tiled map rendering when tile sizes do not match hex side length
